Fix that tricky issue where on iOS the dropdown would appear under things it shouldn't.

--- a/styles/editable-ingredient.styl
+++ b/styles/editable-ingredient.styl
@@ -115,9 +115,11 @@ between-tile-spacing = 8px
     .Select-control
       padding-right 0
 
-      color grey5
       border-color grey2
       background-color grey0a
+
+      .Select-placeholder
+        color grey5
 
     .Select-arrow
       display none
